test/resources/parser/failing/zomtest7.scala
object UnterminatedComment {
  /* This comment never ends
  val x: Int = 1
}